src/objects/actionHub__Rules__c.object
<CustomObject>
    <description>actionHub Rules</description>
    <fields>
        <fullName>actionHub__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>actionHub__ExecutionOrder__c</fullName>
        <label>Execution Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>actionHub__Notes__c</fullName>
        <label>Notes</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>actionHub__RuleName__c</fullName>
        <label>Rule Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>actionHub__SourceConnectionId__c</fullName>
        <label>Source Connection Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>actionHub__SourceConnectionName__c</fullName>
        <label>Source Connection</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>actionHub__SourceObjectAPIName__c</fullName>
        <label>Source Object API Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>actionHub__SourceObjectDisplayName__c</fullName>
        <label>Source Object</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Rule</label>
    <listViews>
        <fullName>actionHub__AllRules</fullName>
        <columns>NAME</columns>
        <columns>actionHub__RuleName__c</columns>
        <columns>actionHub__SourceObjectDisplayName__c</columns>
        <columns>actionHub__SourceConnectionName__c</columns>
        <columns>actionHub__ExecutionOrder__c</columns>
        <columns>actionHub__Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Rules</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Rule Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>